# discord_audio_archive_bot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  FOLDER_STRUCTURE.md  HYBRID_DEPLOYMENT_GUIDE.md  LICENSE  MANIFEST.in  OPEN_SOURCE_CHECKLIST.md  PACKAGE_SUMMARY.md  PACKAGING_GUIDE.md  QUICK_START.md  README.md  SECURITY.md  SETUP_SUMMARY.md  final_setup_test.sh  hybrid_bot.py  install_package.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  run_bot_forever.bat  run_bot_forever.sh  run_hybrid.sh  setup.py  setup.sh  setup_universal.sh  test_hybrid_system.py  test_setup_functions.sh  voice_manager_hybrid.py  voice_recorder.js
.claude/: settings.local.json
.github/: SETUP_CHECKLIST.md  WORKFLOWS_QUICK_REFERENCE.md  WORKFLOWS_SUMMARY.md  WORKFLOW_DIAGRAM.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: README.md  build.yml  ci.yml  dependency-check.yml  release.yml
audio_archive_bot/: __init__.py  __main__.py  cli.py  hybrid_bot.py  voice_manager_hybrid.py
dev_tools/: FIX_BOT_PERMISSIONS.md  decode_permissions.py  fix_discord_imports.py  test_ci_locally.sh
scripts/: verify_setup.sh
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_integration.py  test_package.py  test_voice_manager.py
